Fixed alignment issues

--- a/src/app/screens/ScreenCover/AsideScreenCover/style.css
+++ b/src/app/screens/ScreenCover/AsideScreenCover/style.css
@@ -5,7 +5,7 @@ section .ProfileRightWidget {
 }
 
 .hiddenScreen {
-    position: absolute;
+    position: fixed;
     height: 100%;
     width: 100%;
     background: rgba(0, 0, 0, .4);
@@ -17,7 +17,7 @@ section .ProfileRightWidget {
 .ProfileRightContainer {
     display: block;
     position: relative;
-    height: calc(100% - 60px);
+    height: calc(100% - 60px) !important;
 }
 
 .hiddenScreen, .ProfileLeftWidget {
